# neoshell

./: CMakeLists.txt  package-lock.json  package.json
.idx/: dev.nix
app/: .nsi_.yaml  app.js  my-test-app.nsi  package.json
examples/simple-node-app/: .nsi.yaml  app.js  package-lock.json  package.json  simple-node-app-1.0.0.nsi
lib/: build.js  image.js  run.js
src/: Makefile  container_launcher.cpp
src/cli/: index.js
src/cli/commands/: build.js  run.js
src/cli/utils/: logger.js
src/sandbox/: main.cpp  utils.h
